# guardian

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
charts/guardian/: Chart.yaml  README.md  values-prod-like.yaml  values-sandbox.yaml  values.yaml
charts/guardian/templates/: deployment.yaml  hpa.yaml  ingress.yaml  k8s-secret-fetcher.yaml  pdb.yaml  priorityclass.yaml  service-headless.yaml  service.yaml  serviceaccount.yaml
src/guardian/: __main__.py  config.py  dependencies.py  main.py  middleware.py  models.py
src/guardian/auth/: __init__.py  request_validator.py
src/guardian/database/: __init__.py  client.py  schema.py
src/guardian/dependencies/: __init__.py  dynamodb.py  jinja2_templates.py
src/guardian/openid/: __init__.py  request_validator.py  utils.py
src/guardian/routers/: auth.py  example_router.py  health.py
src/guardian/templates/: authorize.html
tests/integration_tests/: conftest.py  env.py  test_guardian.py
tests/unit_tests/: test_guardian.py
tests/utils/: docker_compose.py  wait.py
