[tool.poetry]
name = "guardian"
version = "0.1.0"
description = "This is a super awesome bootstrapped Python project"
authors = ["Abraham Yusuf <abraham.yusuf@lightspeedhq.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20"
oauthlib = { extras = ["signedtoken"], version = "^3.2.2" }
pydantic = { extras = ["email"], version = "^1.10.7" }
jinja2 = "^3.1.2"
fastapi = { extras = ["all"], version = "^0.95.1" }
redis = { extras = ["hiredis"], version = "^4.5.4" }
ls-logging = {version = "^1.0.1", source = "lsk-pypi"}
aiodynamo = {version = "^22.12", extras = ["httpx"]}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
coverage = "^6.5.0"
pytest-asyncio = "^0.20.3"
pylint = ">=2.15"
isort = ">=5.11"
black = ">=22.12"
pre-commit = ">=2.20"
ruff = ">=0.0.235"
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", tag = "0.13.1+ibm.56.dss" }

[[tool.poetry.source]]
name = "lsk-pypi"
url = "https://lsk-809245501444.d.codeartifact.us-east-1.amazonaws.com/pypi/lsk-pypi/simple"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--asyncio-mode=auto --color=yes --tb=short -vvv -ra"
testpaths = ["tests/unit_tests", "tests/integration_tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
extend-select = ["I", "N", "W", "PLE", "PLW", "RUF"]
force-exclude = true
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["guardian"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pylint.master]
ignore-paths = ["^tests/.*$"]

[tool.pylint.messages_control]
disable = "R0903, W0511, E0401, C0114, C0115, C0116"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.basic]
good-names = "e, i, j, n, x, fp, id, ok"
